--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
 .link{
     display: flex;
     align-items:center;
-    gap: 10px;
+    gap: 20px
    
 }
 .barlink:link, .barlink:visited{  
@@ -28,9 +28,18 @@ nav{
     color: aliceblue;
 }
 .barlink:hover{
-    color: cyan;
+    color: #a5dee3;
+    
 }
-
+.nar{
+    background-color:#a5dee3;
+    color: black;
+    border: none;
+    border-radius: 3px;
+    width: 60px;
+    height: 25px;
+  
+}
 .container2{
     display: flex;
     flex-direction: column;
